--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ __pycache__/
 
 # Editor
 .vscode
+.idea
 
 # C extensions
 *.so
@@ -70,6 +71,7 @@ coverage.xml
 
 # Django stuff:
 *.log
+savanna/settings.py
 db.sqlite3
 db.sqlite3-journal
 db.sqlite3.backup
