--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# Custom section
+savanna/settings.py
+secrets.py
+
 # DB
 backup-dbs/
 media/
@@ -71,7 +75,6 @@ coverage.xml
 
 # Django stuff:
 *.log
-savanna/settings.py
 db.sqlite3
 db.sqlite3-journal
 db.sqlite3.backup
